tests/compile_failures/non_existing_file.rs
use macro_io::read_file;

fn main() {
    read_file!("tests/testfiles/non-existing-file.txt");
}
