tests/compile_failures/non_existing_file.stderr
error: proc macro panicked
 --> $DIR/non_existing_file.rs:4:5
  |
4 |     read_file!("tests/testfiles/non-existing-file.txt");
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = help: message: [macro_io::read_file] Could not find file: Os { code: 2, kind: NotFound, message: "No such file or directory" }
